testData/diagnostics/const_scope_2.diag.txt
testData/diagnostics/const_scope_2.nut line = (5) column = (6) : error: Unknown variable [x]
print(x)
      ^

